added two exercises related to fibonacci numbers